--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env]
+lib_deps =
+    arduino-libraries/NTPClient@^3.2.1
+
 [env:esp12e]
 platform = espressif8266
 board = esp12e
